k8s/knowledge-graph-api/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knowledge-graph-api
  labels:
    app: knowledge-graph-api
    app.kubernetes.io/part-of: catalyst-data
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "data"
    gethomepage.dev/name: "Knowledge Graph API"
    gethomepage.dev/description: "GraphQL API"
    gethomepage.dev/group: "Data Services"
    gethomepage.dev/icon: "si-graphql"
    gethomepage.dev/href: "http://kg-graphql.talos00"
    gethomepage.dev/siteMonitor: "http://knowledge-graph-api.catalyst-data.svc.cluster.local:4000"
    gethomepage.dev/weight: "2"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kg-graphql.talos00`)
      kind: Rule
      services:
        - name: knowledge-graph-api
          port: 4000
